fix(frontend): fix notification layout on mobile

--- a/packages/frontend/src/index.css
+++ b/packages/frontend/src/index.css
@@ -15,6 +15,7 @@ select {
   font-family: monospace;
   font-size: 1em;
   font-weight: bold;
+  max-width: 100%;
   padding: 0em 0.25em;
   text-align-last: center;
 }
@@ -57,11 +58,15 @@ footer a {
   text-align: center;
 }
 
+#container,
+#notifications span {
+  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
+    0 10px 10px -5px rgba(0, 0, 0, 0.04);
+}
+
 #container {
   background-color: #fff;
   border-radius: 7px;
-  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-    0 10px 10px -5px rgba(0, 0, 0, 0.04);
   overflow-x: auto;
   overflow-y: hidden;
 }
@@ -73,30 +78,30 @@ footer a {
 }
 
 #notifications {
-  top: 1em;
+  bottom: 1em;
   color: white;
   hyphens: auto;
+  left: 0;
   position: fixed;
-  right: 1em;
-  text-align: right;
-  width: 350px;
-}
-
-#notifications span {
-  background-color: black;
-  border-radius: 4px;
-  box-shadow: 0 20px 25px -5px rgba(0, 0, 0, 0.1),
-    0 10px 10px -5px rgba(0, 0, 0, 0.04);
-  display: inline-block;
-  cursor: pointer;
-  font-style: italic;
-  margin-bottom: 1em;
-  padding: 0.5em;
-  text-align: left;
+  right: 0;
+  text-align: center;
+  width: 100%;
 }
 
 #notifications > div {
   position: relative;
+}
+
+#notifications span {
+  background-color: #48AFF3;
+  border: 1px solid white;
+  border-radius: 4px;
+  display: inline-block;
+  cursor: pointer;
+  font-style: italic;
+  margin-top: 1em;
+  padding: 1em;
+  text-align: left;
 }
 
 #notifications .danger {
@@ -108,20 +113,52 @@ footer a {
 }
 
 .notification-in {
-  animation: notification-in 0.5s ease-out forwards;
+  animation: notification-up-in 0.5s ease-out forwards;
 }
 
 .notification-out {
-  animation: notification-out 0.5s ease-in forwards;
+  animation: notification-up-out 0.5s ease-in forwards;
 }
 
-@keyframes notification-in {
+@keyframes notification-up-in {
+  0% {
+    bottom: -100vh;
+    opacity: 0;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    bottom: 0;
+    opacity: 1;
+  }
+}
+
+@keyframes notification-up-out {
+  0% {
+    bottom: 0;
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0;
+  }
+
+  100% {
+    bottom: -100vh;
+    opacity: 0;
+  }
+}
+
+@keyframes notification-down-in {
   0% {
     opacity: 0;
     top: -100vh;
   }
 
-  50% {
+  90% {
     opacity: 0;
   }
 
@@ -131,13 +168,13 @@ footer a {
   }
 }
 
-@keyframes notification-out {
+@keyframes notification-down-out {
   0% {
     opacity: 1;
     top: 0;
   }
 
-  50% {
+  90% {
     opacity: 0;
   }
 
@@ -147,8 +184,26 @@ footer a {
   }
 }
 
-@media (max-width: 768px) {
-  select {
-    width: 100%;
+@media (min-width: 768px) {
+  #notifications {
+    bottom: initial;
+    left: initial;
+    right: 1em;
+    text-align: right;
+    top: 1em;
+    width: 350px;
+  }
+
+  #notifications span {
+    margin-bottom: 1em;
+    margin-top: 0;
+  }
+
+  .notification-in {
+    animation: notification-down-in 0.5s ease-out forwards;
+  }
+
+  .notification-out {
+    animation: notification-down-out 0.5s ease-in forwards;
   }
 }
